--- a/settings.html
+++ b/settings.html
@@ -368,8 +368,58 @@
                         </a>
 
                         <div class="footer-version" style="font-size: 12px; opacity: 0.6; font-family: monospace;">
-                            <span>v2.0.0</span> •
-                            <span>Updated: 29/12/2025</span>
+                            <span>v2.1.0</span> •
+                            <span>Updated: 13/01/2026</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Changelog Section -->
+            <div class="md-card md-card-outlined">
+                <div class="md-card-body">
+                    <div class="md-data-header" style="margin-bottom: 16px;">
+                        <span class="md-data-icon">📋</span>
+                        <div class="md-data-text">
+                            <h3>Nhật ký thay đổi</h3>
+                            <p>Các cập nhật mới nhất của ứng dụng</p>
+                        </div>
+                    </div>
+
+                    <div class="changelog-list" style="display: flex; flex-direction: column; gap: 16px;">
+                        <!-- Version 2.1.0 -->
+                        <div class="changelog-item"
+                            style="padding: 16px; background: var(--md-surface-container-high); border-radius: 12px; border-left: 4px solid var(--md-primary);">
+                            <div style="display: flex; align-items: center; gap: 8px; margin-bottom: 8px;">
+                                <span style="font-weight: 600; color: var(--md-primary);">v2.1.0</span>
+                                <span style="font-size: 12px; opacity: 0.6;">13/01/2026</span>
+                                <span
+                                    style="background: var(--md-primary); color: var(--md-on-primary); font-size: 10px; padding: 2px 8px; border-radius: 12px;">MỚI</span>
+                            </div>
+                            <ul
+                                style="margin: 0; padding-left: 20px; font-size: 14px; line-height: 1.8; color: var(--md-on-surface-variant);">
+                                <li>🆕 <strong>Thêm môn Kinh tế học (KTH)</strong> - 163 câu hỏi trắc nghiệm với 12 chủ
+                                    đề</li>
+                                <li>🆕 <strong>Thêm môn Đại cương Logistics và Chuỗi cung ứng</strong> - Ngân hàng câu
+                                    hỏi mới</li>
+                                <li>📚 Hỗ trợ học theo chủ đề cho môn Kinh tế học</li>
+                                <li>🔧 Cải thiện hệ thống quản lý môn học</li>
+                            </ul>
+                        </div>
+
+                        <!-- Version 2.0.0 -->
+                        <div class="changelog-item"
+                            style="padding: 16px; background: var(--md-surface-container); border-radius: 12px;">
+                            <div style="display: flex; align-items: center; gap: 8px; margin-bottom: 8px;">
+                                <span style="font-weight: 600;">v2.0.0</span>
+                                <span style="font-size: 12px; opacity: 0.6;">29/12/2025</span>
+                            </div>
+                            <ul
+                                style="margin: 0; padding-left: 20px; font-size: 14px; line-height: 1.8; color: var(--md-on-surface-variant);">
+                                <li>🎨 Thiết kế lại giao diện Material 3 × Liquid Glass</li>
+                                <li>🌈 Thêm 25+ màu chủ đạo Material You</li>
+                                <li>📱 Cải thiện trải nghiệm trên di động</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
