--- a/index.html
+++ b/index.html
@@ -53,6 +53,77 @@
             </div>
         </section>
 
+        <!-- New Update Banner - Prominent -->
+        <section class="update-banner" style="padding: 0 16px; margin-top: -20px; margin-bottom: 24px;">
+            <div class="md-container">
+                <div style="
+                    background: linear-gradient(135deg, var(--md-primary-container), var(--md-tertiary-container, var(--md-primary-container)));
+                    border-radius: 16px;
+                    padding: 16px 20px;
+                    display: flex;
+                    align-items: center;
+                    gap: 16px;
+                    flex-wrap: wrap;
+                    box-shadow: var(--md-shadow-2);
+                    border: 1px solid var(--md-primary);
+                    animation: pulse-border 2s ease-in-out infinite;
+                ">
+                    <div style="
+                        background: var(--md-primary);
+                        color: var(--md-on-primary);
+                        padding: 6px 14px;
+                        border-radius: 20px;
+                        font-size: 12px;
+                        font-weight: 600;
+                        display: flex;
+                        align-items: center;
+                        gap: 6px;
+                        white-space: nowrap;
+                    ">
+                        🎉 v2.1.0
+                    </div>
+                    <div style="flex: 1; min-width: 200px;">
+                        <div
+                            style="font-weight: 600; font-size: 15px; margin-bottom: 4px; color: var(--md-on-surface);">
+                            Thêm 2 môn học mới!
+                        </div>
+                        <div
+                            style="font-size: 13px; color: var(--md-on-surface-variant); display: flex; gap: 12px; flex-wrap: wrap;">
+                            <span>📈 Kinh tế học</span>
+                            <span>📦 Logistics</span>
+                        </div>
+                    </div>
+                    <a href="settings.html" style="
+                        background: var(--md-primary);
+                        color: var(--md-on-primary);
+                        padding: 8px 16px;
+                        border-radius: 20px;
+                        font-size: 13px;
+                        font-weight: 500;
+                        text-decoration: none;
+                        white-space: nowrap;
+                        transition: transform 0.2s, box-shadow 0.2s;
+                    " onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
+                        Chọn môn học →
+                    </a>
+                </div>
+            </div>
+        </section>
+
+        <style>
+            @keyframes pulse-border {
+
+                0%,
+                100% {
+                    box-shadow: var(--md-shadow-2), 0 0 0 0 rgba(var(--md-primary-rgb, 124, 58, 237), 0.4);
+                }
+
+                50% {
+                    box-shadow: var(--md-shadow-2), 0 0 0 4px rgba(var(--md-primary-rgb, 124, 58, 237), 0.1);
+                }
+            }
+        </style>
+
         <!-- Material Feature Cards - Bento Grid Redesign -->
         <section class="md-section">
             <div class="md-container">
