Add Kinh tế học tự luận topic and sharing feature
Introduced a new 'Giải bài tập Tự luận (Tham khảo)' topic for Kinh tế học with content and resources, including extracted PDF and formatted text. Added deep link sharing for topics in the study interface, updated version to 2.1.1, and included scripts for PDF extraction and study data updates. Removed a temporary Word file and added a new PDF resource.

--- a/index.html
+++ b/index.html
@@ -80,17 +80,17 @@
                         gap: 6px;
                         white-space: nowrap;
                     ">
-                        🎉 v2.1.0
+                        🎉 v2.1.1
                     </div>
                     <div style="flex: 1; min-width: 200px;">
                         <div
                             style="font-weight: 600; font-size: 15px; margin-bottom: 4px; color: var(--md-on-surface);">
-                            Thêm 2 môn học mới!
+                            Cập nhật tính năng mới!
                         </div>
                         <div
                             style="font-size: 13px; color: var(--md-on-surface-variant); display: flex; gap: 12px; flex-wrap: wrap;">
-                            <span>📈 Kinh tế học</span>
-                            <span>📦 Logistics</span>
+                            <span>🔗 Chia sẻ chủ đề</span>
+                            <span>📝 Tự luận Kinh tế học</span>
                         </div>
                     </div>
                     <a href="settings.html" style="
