Add version manager and changelog integration
Introduced js/version_manager.js to handle changelog and version display across the app. Added changelog.json for release notes, updated index.html and settings.html to load the new script, and improved study.html with MathJax support for rendering math. Minor CSS cleanup and updated study_data.json for KTH subject.

--- a/settings.html
+++ b/settings.html
@@ -480,6 +480,7 @@
     </nav>
 
     <script src="js/progress.js?v=2025122905"></script>
+    <script src="js/version_manager.js?v=2025122905"></script>
     <script src="js/common.js?v=2025122905"></script>
     <script src="js/dashboard.js?v=2025122905"></script>
     <!-- Reusing dashboard.js for export/import logic if functions are global or accessible -->
