--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@
     </nav>
 
     <script src="js/progress.js?v=2025122905"></script>
+    <script src="js/version_manager.js?v=2025122905"></script>
     <script src="js/common.js?v=2025122905"></script>
     <script src="js/dashboard.js?v=2025122905"></script>
 </body>
